--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -46,7 +46,6 @@ en:
       day: Day
       month: Month
       year: Year
-
   title: "Travel Discovery"
   page_title:
     login: "Log in"
@@ -108,7 +107,11 @@ en:
     unfollow: "Unfollow"
     like: "Like"
     unlike: "Unlike"
-
+    comment: "Comment"
+    close: "Close"
+    edit: "Edit"
+    delete: "Delete"
+    post: "Post"
   label:
     signup: "Sign up"
     email: "Email"
@@ -133,6 +136,7 @@ en:
       other: "Posts"
     followers: "Followers"
     following: "Following"
+    post_content: "What's on your mind?"
 
   flash:
     danger:
@@ -141,7 +145,11 @@ en:
       require_login_message: "Please log in."
     success:
       welcome_message: "Welcome to travel discovery"
+      micropost_deleted: "Deleted post success"
 
+  dialog:
+    delete_comment_confirm: "Are you sure to delete this comment?"
+    delete_post_confirm: "Are you sure to delete this post?"
   views:
     pagination:
       first: "« FIRST"
