--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -127,6 +127,10 @@ en:
     new_user_ques: "New user ?"
     remember_me: "Remember me"
     user : "User"
+    rater:
+      zero: "%{count} Rater"
+      one: "%{count} Rater"
+      other: "%{count} Raters"
     comment:
       zero: "%{count} Comment"
       one: "%{count} Comment"
@@ -171,3 +175,6 @@ en:
           other: "Displaying <b>all %{count}</b> %{entry_name}"
       more_pages:
         display_entries: "Displaying %{entry_name} <b>%{first} - %{last}</b> of <b>%{total}</b> in total"
+  js_msg:
+    city_not_found: "Cannot found city!"
+    travel_place_not_found: "Cannot found travel place"
