--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -51,6 +51,7 @@ en:
     login: "Log in"
     signup: "Sign up"
     edit_user: "Edit Information"
+    newfeed: "New Feed"
   dashboard: "Dashboard"
   admin:
     header:
